Bug 395084 - KRename does not terminate after renaming
Summary: KRename does not terminate after renaming
Status: RESOLVED FIXED
Alias: None
Product: krename
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.0.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Heiko Becker
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-06-06 12:40 UTC by Henrik Niehaus
Modified: 2022-06-06 19:22 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.1
Sentry Crash Report:


Attachments
Not fixed if not in any available repositories! (2.89 KB, image/png)
2022-06-05 14:31 UTC, nunya_fukkin_bizness
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Henrik Niehaus 2018-06-06 12:40:39 UTC
KRename does not terminate after renaming. The renaming works fine and KRename seems to terminate, since all windows are gone, but the process keeps running.

Steps to reproduce:
1. Start KRename
2. Select one or more files to rename
3. Select Renaming of original file
4. Apply any rules for renaming
5. Rename the files.
--> Renaming proceeds --> Window closes --> everything looks find, but process still running

Running on Gentoo with Plasma
KRename 5.0.0
KDE Frameworks 5.43.0
Qt 5.9.4
Comment 1 Henrik Niehaus 2018-06-06 12:43:19 UTC
Also just noticed, that it terminates correctly, if you close the program before starting the renaming process.
Comment 2 Attila Schler 2018-06-16 12:16:14 UTC
I can observe the same behavior.

OpenSUSE Tumbleweed 20180606-261.1
KRename 5.0.0
KDE Frameworks 5.46.0
Qt 5.11.0
Comment 3 Heiko Becker 2018-06-20 15:32:22 UTC
Git commit 11abc9b6877fd5dfae2a0c9d403dda1732e6f14f by Heiko Becker.
Committed on 20/06/2018 at 15:31.
Pushed by heikobecker into branch '5.0'.

Close the app if the progress dialog is closed

M  +13   -0    src/progressdialog.cpp
M  +3    -0    src/progressdialog.h

https://commits.kde.org/krename/11abc9b6877fd5dfae2a0c9d403dda1732e6f14f
Comment 4 szecsodimlaszlo 2019-05-28 06:14:17 UTC
I have the same old problem as well.

Additionally, after rebooting, KDE opens as many instances of KRename as I forgot to kill **manually** in the previous session. When it opens more than 30 instances that is very annoying.

Arch Linux
KRename 5.0.0
KDE Frameworks 5.58.2
Qt 5.12.3

Maybe related:
https://bugs.kde.org/show_bug.cgi?id=398429
Comment 5 Attila Schler 2019-05-28 18:05:02 UTC
(In reply to szecsodimlaszlo from comment #4)
> I have the same old problem as well.
> 
> Additionally, after rebooting, KDE opens as many instances of KRename as I
> forgot to kill **manually** in the previous session. When it opens more than
> 30 instances that is very annoying.
> 
> Arch Linux
> KRename 5.0.0
> KDE Frameworks 5.58.2
> Qt 5.12.3
> 
> Maybe related:
> https://bugs.kde.org/show_bug.cgi?id=398429


For me it is fixed in: KRename, Version 5.0.60.
Comment 6 Henrik Niehaus 2019-05-31 09:11:04 UTC
This is fixed. I tested it with the latest Git snapshot this week. It seems there has not been a new release since I reported this bug, so that all the distributions still ship the old 5.0.0, which still has the bug.

If you are really annoyed by this bug, you can compile KRename by yourself (e.g. in /tmp) and overwrite /usr/bin/krename with the resulting binary. This way you  don't mess up your package manager and still have the new version. But it's kind of a guerilla solution ;)
Comment 7 szecsodimlaszlo 2020-05-01 07:15:48 UTC
After I tested krename-git package on Arch Linux I can confirmed that it is fixed in 5.0.60.r512.e0ee633.

https://aur.archlinux.org/packages/krename-git/
Comment 8 gsibk 2020-08-11 18:51:28 UTC
Still the same here: KRename does not terminate after renaming. The renaming works fine and KRename seems to terminate, since all windows are gone, but the process keeps running.
And after a reboot all the KRename windows open up again.

Linux/KDE Plasma: Kubuntu 20.04 LTS 5.4.0-42 generic 64-bit / Plasma Breeze
recently installed and consequently kept up to date
(available in About System)
KDE Plasma Version: 5.18.5
KDE Frameworks Version: 5.68.0
Qt Version: 5.12.8

ADDITIONAL INFORMATION
CPU: 4x AMD Phenom II X4 955
16 GB RAM
Comment 9 Wolfgang Bauer 2020-10-06 13:20:05 UTC
(In reply to gsibk from comment #8)
> Still the same here: KRename does not terminate after renaming.
This is fixed in the latest version 5.0.1, released yesterday (though it actually has been fixed 2 years ago, there just wasn't a new krename release since then).

Ask your distribution to update their package or backport the fix.
Comment 10 Heiko Becker 2020-10-06 13:25:09 UTC
Thanks for confirming.
Comment 11 nunya_fukkin_bizness 2022-06-05 14:31:22 UTC
Created attachment 149480 [details]
Not fixed if not in any available repositories!

Not resolved if new version with fix not in any available repositories!
I'm not sure what the cause is. I have found a workaround though. Edit krename in alacarte (main menu). I found krename in Accessories. Under properties check run in terminal. Then when you use krename a terminal window will also open. When done renaming files close krename as you would with any other application. Then close the terminal window and it will kill the krename process as well.
Comment 12 nunya_fukkin_bizness 2022-06-05 14:33:49 UTC
Comment on attachment 149480 [details]
Not fixed if not in any available repositories!

Not resolved if version with fix not available in distribution repositories! 
I'm not sure what the cause is. I have found a workaround though. Edit krename in alacarte (main menu). Other menu editors will probably work too. I found krename in Accessories. Under properties check run in terminal. Then when you use krename a terminal window will also open. When done renaming files close krename as you would with any other application. Then close the terminal window and it will kill the krename process as well.
Comment 13 Heiko Becker 2022-06-05 22:10:06 UTC
> Comment on attachment 149480 [details]
> Not fixed if not in any available repositories!

I can't do anything about distribution repositories, I don't have access to them and I don't even know which you are using. As far as I know the bug is fixed in the latest release (until proven otherwise), which is available for quite some time and I see a lot of 5.0.1's on https://repology.org/project/krename/badges. So please ask the distro of your choice to update or switch to one which is more recent.
Comment 14 nunya_fukkin_bizness 2022-06-06 19:19:06 UTC
Ubuntu 20.04 seems like it will never get a new version of krename. I have a workaround for versions with won't quit process on exit. I used alacatre to change the menu item so that krename will launch in terminal. krename launches and a terminal window launches. After using krename I hit close on krename and close the terminal window. Closing the terminal window also kills the krename process.
Comment 15 nunya_fukkin_bizness 2022-06-06 19:19:24 UTC
Ubuntu 20.04 seems like it will never get a new version of krename. I have a workaround for versions with won't quit process on exit. I used alacatre to change the menu item so that krename will launch in terminal. krename launches and a terminal window launches. After using krename I hit close on krename and close the terminal window. Closing the terminal window also kills the krename process.
Comment 16 nunya_fukkin_bizness 2022-06-06 19:22:45 UTC
Ubuntu 20.04 seems like it will never get a new version of krename. I 
have a workaround for versions with won't quit process on exit. I used 
alacatre to change the menu item so that krename will launch in 
terminal. krename launches and a terminal window launches. After using 
krename I hit close on krename and close the terminal window. Closing 
the terminal window also kills the krename process.

On 6/5/22 3:10 PM, Heiko Becker wrote:
> https://bugs.kde.org/show_bug.cgi?id=395084
>
> --- Comment #13 from Heiko Becker <heiko.becker@kde.org> ---
>> Comment on attachment 149480 [details]
>> Not fixed if not in any available repositories!
> I can't do anything about distribution repositories, I don't have access to
> them and I don't even know which you are using. As far as I know the bug is
> fixed in the latest release (until proven otherwise), which is available for
> quite some time and I see a lot of 5.0.1's on
> https://repology.org/project/krename/badges. So please ask the distro of your
> choice to update or switch to one which is more recent.
>