Close the app if the progress dialog is closed

BUG: 395084